--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.env
-node_modules/
-OP스코어 테스트.txt
-코파일럿아 도와줘!.txt
+backend/.env
+backend/node_modules/
+backend/OP스코어 테스트.txt
+backend/코파일럿아 도와줘!.txt
