--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.16",
+    "uuid": "^11.1.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
